Bug 1349989: Correctly handle errors for OMT-compiled scripts. r=shu

MozReview-Commit-ID: 3FpoUmu9ijI

--HG--
extra : rebase_source : 666fb25c1a36b14f28bd61f0622143b063b3759e